--- a/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
@@ -7,36 +7,29 @@
     android:layout_height="match_parent"
     tools:context=".Acitivity.AnaActivity">
 
-    <LinearLayout
+
+
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:background="#f9f7f7"
-        android:layout_alignParentTop="true"
-        android:layout_height="48dp">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textStyle="bold"
-            android:gravity="center|left"
-            android:layout_marginLeft="4dp"
-            android:textSize="20dp"
-            android:textColor="#112d4e"
-            android:layout_gravity="center"
-            android:text="Animal Tinder"/>
-        <View
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#112d4e"/>
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    </LinearLayout>
+    </android.support.design.widget.AppBarLayout>
+
+
+
 
 
 
         <FrameLayout
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="60dp"
             android:id="@+id/fragmentlayout"
             android:layout_width="match_parent"
             android:layout_marginBottom="60dp"
