--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_filter.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_filter.xml
@@ -17,15 +17,15 @@
             android:layout_below="@id/filtre"
             android:layout_height="wrap_content">
             <Spinner
-                android:id="@+id/anasayfairkSpinner"
+                android:id="@+id/filterirkSpinner"
                 android:layout_width="120dp"
                 android:layout_height="match_parent"></Spinner>
             <Spinner
-                android:id="@+id/anasayfacinsiyetSpinner"
+                android:id="@+id/filtercinsiyetSpinner"
                 android:layout_width="120dp"
                 android:layout_height="match_parent"></Spinner>
             <Spinner
-                android:id="@+id/anasayfailceSpinner"
+                android:id="@+id/filterilceSpinner"
                 android:layout_width="120dp"
                 android:layout_height="match_parent"></Spinner>
 
@@ -35,7 +35,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Uygula"
+        android:text="filtrele"
         android:id="@+id/filtreleButton"
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
