--- a/sohbetuygulamasi/app/src/main/res/layout/activity_kayit_ol.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_kayit_ol.xml
@@ -21,6 +21,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="480dp"
+            android:layout_marginTop="60dp"
             android:orientation="vertical"
             android:paddingLeft="20.7dp">
 
