--- a/sohbetuygulamasi/app/src/main/res/layout/userlayout.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/userlayout.xml
@@ -52,6 +52,7 @@
                         android:id="@+id/usernameTextview"
                         android:layout_weight="1"
                         android:textStyle="bold"
+                        android:textColor="#000000"
                         android:textSize="16dp"
                         android:layout_gravity="center"/>
 
