--- a/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
@@ -18,8 +18,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#f9ed69"
-            app:titleTextColor="#4a4a4a"
+            android:background="@drawable/b5"
+            app:titleTextColor="#707171"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -41,11 +41,12 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="58dp"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
+        android:background="@drawable/b5"
         android:layout_marginStart="0dp"
-        android:background="#f9ed69"
+
         app:menu="@menu/navigation" />
 
 </RelativeLayout>
