--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_filter.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_filter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,12 +9,37 @@
     <!-- TODO: Update blank fragment layout -->
 
 
+    <LinearLayout
+        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="120dp"
+            android:text="Irk"
+            android:gravity="center"
+            android:layout_height="match_parent"></TextView>
+        <TextView
+            android:text="Cinsiyet"
+            android:gravity="center"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"></TextView>
+        <TextView
+            android:text="İlçe"
+            android:gravity="center"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"></TextView>
 
+
+    </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="100dp"
             android:layout_width="wrap_content"
             android:orientation="horizontal"
-            android:layout_below="@id/filtre"
+            android:gravity="center"
+            android:layout_marginLeft="20dp"
             android:layout_height="wrap_content">
             <Spinner
                 android:id="@+id/filterirkSpinner"
@@ -36,10 +61,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="filtrele"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="4dp"
         android:id="@+id/filtreleButton"
-        android:layout_gravity="right"
-        android:layout_marginRight="20dp"
         android:textColor="#fff"/>
 
 
-</LinearLayout>
+</RelativeLayout>
