--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_user_profile.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_user_profile.xml
@@ -6,15 +6,13 @@
     tools:context=".Fragments.OtherProfileFragment">
 
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardElevation="3dp"
-
         android:layout_gravity="center"
-        android:layout_margin="2dp"
-        card_view:cardCornerRadius="4dp">
+        android:layout_margin="5dp"
+        android:layout_above="@+id/navigation">
 
 
         <LinearLayout
@@ -27,10 +25,11 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/userProfileProfileImage"
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
-                android:layout_height="100dp"
+                android:layout_height="200dp"
+                android:layout_margin="12dp"
                 android:src="@drawable/defaultprofile"
 
                 app:civ_border_width="2dp"
@@ -39,13 +38,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="4dp"
                 android:gravity="center"
-                android:text="Arkadas ekle"
                 android:textSize="25dp"
                 android:id="@+id/userProfileNameText2"
-                android:textColor="#4f5573"
+                android:textColor="#707171"
                 android:textStyle="bold" />
+
 
             <!--          <LinearLayout
                          android:layout_width="match_parent"
@@ -76,8 +75,8 @@
                      </LinearLayout>   -->
 
                      <LinearLayout
-                         android:layout_width="match_parent"
-                         android:layout_height="wrap_content"
+                         android:layout_width="1dp"
+                         android:layout_height="1dp"
                          android:orientation="horizontal"
                          android:layout_marginLeft="20dp"
                          android:layout_marginTop="5dp">
@@ -88,6 +87,7 @@
                              android:layout_weight="1"
                              android:id="@+id/userProfileArkadasText"
                              android:text="0 arkadas"
+                             android:visibility="invisible"
                              android:textStyle="bold"
                              android:layout_marginLeft="50dp"/>
 
@@ -102,6 +102,7 @@
                              android:layout_weight="1"
                              android:layout_marginRight="50dp"
                              android:text="0 takipçi"
+                             android:visibility="invisible"
                              android:id="@+id/userProfileTakipText"
                              android:textStyle="bold"/>
 
@@ -118,18 +119,22 @@
 
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
-                         android:textSize="15dp"
+                         android:textSize="20dp"
                          android:layout_marginLeft="20dp"
                          android:textStyle="bold"
-                         android:textColor="#2b0e72"
+                         android:textColor="#222831"
                          android:text="Genel Bilgiler"
                          android:layout_marginTop="10dp"/>
+                         <View
+                             android:layout_width="match_parent"
+                             android:layout_height="1dp"
+                             android:background="@android:color/darker_gray"/>
 
                      <TextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="10dp"
-                         android:textColor="#353190"
+                         android:textColor="#393e46"
                          android:layout_marginLeft="20dp"
                          android:id="@+id/userProfileNameText"
                          android:text="Sahip"/>
@@ -137,35 +142,35 @@
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="5dp"
-                         android:textColor="#353190"
+                         android:textColor="#393e46"
                          android:id="@+id/userProfileEgitimText"
                          android:layout_marginLeft="20dp"
-                         android:text="egitim"/>
+                         android:text="Egitim"/>
                      <TextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="5dp"
                          android:id="@+id/userProfileDogumText"
-                         android:textColor="#353190"
+                         android:textColor="#393e46"
                          android:layout_marginLeft="20dp"
-                         android:text="dogumtarihi"/>
+                         android:text="Doğum Tarihi"/>
                      <TextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="5dp"
                          android:id="@+id/userProfileHakkimdaText"
-                         android:textColor="#353190"
+                         android:textColor="#393e46"
                          android:layout_marginLeft="20dp"
-                         android:text="hakkında"/>
+                         android:text="Hakkında"/>
 
                          <TextView
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="5dp"
                              android:id="@+id/userProfileNotText"
-                             android:textColor="#353190"
+                             android:textColor="#393e46"
                              android:layout_marginLeft="20dp"
-                             android:text="not"/>
+                             android:text="Not"/>
 
 
                      </LinearLayout>
@@ -188,11 +193,11 @@
                              android:layout_marginRight="40dp"
                              android:id="@+id/userProfileArkadasImage"/>
 
-                         <ImageView
-                             android:layout_width="0dp"
-                             android:layout_height="50dp"
+                         <Button
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
                              android:id="@+id/userProfileMesajImage"
-                             android:background="@drawable/mesaj_gonder"
+                         android:text="Mesaj gönder"
                              android:layout_weight="1"/>
 
                          <ImageView
@@ -217,6 +222,7 @@
                              android:layout_width="0dp"
                              android:layout_height="50dp"
                              android:layout_weight="1"
+                             android:visibility="invisible"
                              android:layout_marginLeft="25dp"
                              android:text="Arkadas ekle"
                              android:textStyle="bold"/>
@@ -225,6 +231,7 @@
                              android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1"
+                             android:visibility="invisible"
                              android:textStyle="bold"
                              android:text="Mesaj Gönder"/>
 
@@ -233,6 +240,7 @@
                              android:layout_height="50dp"
                              android:layout_weight="1"
                              android:text="Takip et"
+                             android:visibility="invisible"
                              android:textStyle="bold"/>
 
                      </LinearLayout>
@@ -242,7 +250,7 @@
                  </LinearLayout>
 
 
-             </android.support.v7.widget.CardView>
+    </android.support.v4.widget.NestedScrollView>
 
 
          </LinearLayout>
