--- a/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".Acitivity.ChatActivity">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_chat"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        card_view:cardBackgroundColor="#216583"
-        card_view:cardElevation="10dp"
+        android:background="@drawable/b5"
         android:layout_alignParentTop="true">
 
         <LinearLayout
@@ -43,10 +42,10 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:id="@+id/chat_username_textview"
-                android:gravity="left"
-                android:textColor="#fff"
+                android:gravity="left|center"
                 android:textStyle="bold"
-                android:textSize="24dp"
+                android:textColor="#707171"
+                android:textSize="20dp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="10dp"
@@ -65,24 +64,24 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_below="@id/card_view_chat"
         android:layout_above="@id/linear"
         android:id="@+id/chat_recycler_view"
-        android:background="@drawable/background_image_chat"
+        android:background="@drawable/backm1"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 
         <LinearLayout
             android:padding="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:id="@+id/linear"
             android:gravity="center"
-            android:background="#216583"
+            android:background="@drawable/b5"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal">
 
@@ -105,9 +104,10 @@
                 android:layout_width="0dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="12dp"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:layout_marginBottom="12dp"
-                android:background="@drawable/mybuttonsend"
+                android:text="Gönder"
+                android:textSize="8dp"
                 android:id="@+id/sendMessageButton"
 
                 android:layout_weight="1"/>
