--- a/sohbetuygulamasi/app/src/main/res/layout/activity_giris.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_giris.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#feb209"
+    android:background="@drawable/backm4"
     android:orientation="vertical"
     tools:context=".Acitivity.GirisActivity">
 
@@ -13,7 +13,6 @@
         android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15.7dp"
-        android:layout_marginTop="30dp"
         android:layout_marginRight="15.7dp"
         android:orientation="vertical">
 
@@ -21,7 +20,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="480dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="52dp"
             android:orientation="vertical"
             android:paddingLeft="20.7dp">
 
@@ -42,10 +41,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="57.7dp"
-                    android:text="LOGIN"
+                    android:layout_marginTop="37.7dp"
+                    android:layout_gravity="center"
+                    android:text="petdate"
                     android:textColor="#030303"
                     android:textSize="31.3sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="LOGIN"
+                    android:layout_marginTop="20dp"
+                    android:textColor="#222831"
+                    android:textSize="21.3sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -56,12 +63,12 @@
                     android:textSize="13.3sp" />
 
                 <EditText
+                    android:id="@+id/input_email_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="@android:color/transparent"
                     android:maxLines="1"
-                    android:id="@+id/input_email_login"
                     android:textCursorDrawable="@drawable/grey_cursor_color"
                     android:textSize="15sp" />
 
@@ -82,6 +89,7 @@
                     android:textSize="13.3sp" />
 
                 <EditText
+                    android:id="@+id/input_password_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="11.7dp"
@@ -89,10 +97,9 @@
                     android:inputType="textPassword"
                     android:maxLength="10"
                     android:maxLines="1"
+                    android:paddingRight="44.3dp"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
-                    android:paddingRight="44.3dp"
-                    android:id="@+id/input_password_login"
                     android:textCursorDrawable="@drawable/grey_cursor_color"
                     android:textSize="15sp" />
 
@@ -113,8 +120,6 @@
                     android:text="Forgot Password?"
                     android:textColor="#d5d5d5"
                     android:textSize="12.3sp" />
-
-
 
 
             </LinearLayout>
