--- a/sohbetuygulamasi/app/src/main/res/layout/message_received_layout.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/message_received_layout.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="3dp"
         android:layout_marginLeft="3dp"
         android:layout_gravity="center"
-        card_view:cardBackgroundColor="#fff"
+        card_view:cardBackgroundColor="#eeeeee"
         card_view:cardCornerRadius="15dp">
     <TextView
         android:layout_width="match_parent"
