--- a/sohbetuygulamasi/app/src/main/res/layout/dummy_list_item.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/dummy_list_item.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:alpha="0.7"
         android:text="Mesaj At"
         android:textColor="#010101"
         android:layout_alignParentBottom="true"
