--- a/sohbetuygulamasi/app/src/main/res/menu/menu_main.xml
+++ b/sohbetuygulamasi/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="filter"
+        android:title="Filter"
         app:showAsAction="never" />
 </menu>
