--- a/sohbetuygulamasi/app/src/main/res/layout/activity_splash.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_splash.xml
@@ -4,12 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     tools:context=".Acitivity.SplashActivity">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="arda"
-        android:textSize="123dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/logo"/>
+
+
+
+
 </LinearLayout>
