--- a/sohbetuygulamasi/app/src/main/res/layout/activity_giris.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_giris.xml
@@ -115,6 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
+                    android:visibility="invisible"
                     android:layout_marginTop="17.3dp"
                     android:layout_marginRight="44.3dp"
                     android:text="Forgot Password?"
