--- a/sohbetuygulamasi/app/src/main/res/menu/navigation.xml
+++ b/sohbetuygulamasi/app/src/main/res/menu/navigation.xml
@@ -25,6 +25,7 @@
     <item
         android:id="@+id/navigation_exit"
         android:icon="@drawable/exit"
+        android:visible="false"
         android:title="Çıkış" />
 
 </menu>
